ISSUE-11274  Themes: rune-core on mobile not able to use Product Q and A

--- a/rune-core/css/sidebar.css
+++ b/rune-core/css/sidebar.css
@@ -97,10 +97,10 @@
     }
 
     /* Page Context */
-    .pushable:not(body) {
+    /*.pushable:not(body) {
         -webkit-transform: translate3d(0, 0, 0);
         transform: translate3d(0, 0, 0);
-    }
+    }*/
 
         .pushable:not(body) > .ui.sidebar,
         .pushable:not(body) > .fixed,
